--- a/addons/filesystem_drawer/plugin.cfg
+++ b/addons/filesystem_drawer/plugin.cfg
@@ -3,5 +3,5 @@
 name="FileSystem Drawer"
 description="Converts the FileSystem dock to a FileSystem Drawer at the bottom of the editor."
 author="Jakob Bouchard"
-version="0.1.0"
-script="filesystem_drawer.gd"
+version="1.0.0"
+script="plugin.gd"
